src/main/java/com/example/springpizza/adapter/web/errors/ErrorResponse.java
package com.example.springpizza.adapter.web.errors;

public record ErrorResponse(String code, String message) {
}
